--- a/UnityLauncherPro/MainWindow.xaml
+++ b/UnityLauncherPro/MainWindow.xaml
@@ -350,6 +350,9 @@
                         </Button>
                     </Grid>
 
+                    <CheckBox x:Name="chkAlphas" Content="Alpha" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="240,6,0,0" Checked="chkAlphas_Checked" Unchecked="chkAlphas_Checked"/>
+                    <CheckBox x:Name="chkBetas" Content="Beta" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="300,6,0,0" Unchecked="chkAlphas_Checked" Checked="chkAlphas_Checked"/>
+
                     <Button Style="{StaticResource CustomButton}" ToolTip="Fetch released versions" x:Name="btnRefreshUpdatesList" Content="⟳" Height="22" Width="26" HorizontalAlignment="Right" VerticalAlignment="Top" FontSize="16"  Margin="0,4,3,0" Padding="1,-2,1,1" BorderBrush="{x:Null}" Click="OnGetUnityUpdatesClick"/>
                     <DataGrid x:Name="dataGridUpdates"  SelectionMode="Single" Margin="4,30,2,42" Background="{x:Null}" BorderBrush="{x:Null}" ColumnHeaderStyle="{StaticResource HeaderStyle}" Padding="0" HorizontalScrollBarVisibility="Disabled" HeadersVisibility="Column" Foreground="{DynamicResource ThemeGridForeground}" HorizontalGridLinesBrush="{DynamicResource ThemeDatagridLines}" VerticalGridLinesBrush="{DynamicResource ThemeGridVerticalGridLines}" AutoGenerateColumns="False" PreviewKeyDown="DataGridUpdates_PreviewKeyDown" PreviewMouseDoubleClick="DataGridUpdates_PreviewMouseDoubleClick" Sorting="dataGridUpdates_Sorting">
                         <DataGrid.CommandBindings>
